--- a/assets/style.css
+++ b/assets/style.css
@@ -9,8 +9,7 @@ body {
 
 h1 {
     text-align: center;
-    color: rgb(61, 4, 78);
-    text-decoration: underline;
+    color: whitesmoke;
     font-size: 45px;
 }
 
